# core-game-release

./: .env.example  README.md  data_scraper.py  docker-compose.yaml  nginx.conf  pyproject.toml
backend/: Dockerfile  database.py  elo.py  main.py  models.py  pyproject.toml  socket_manager.py  state.py
backend/routes/: auth.py  websockets.py
frontend/: dashboard.html  index.html  leaderboard.html  register.html
frontend/css/: dashboard.css  leaderboard.css  login.css
frontend/js/: auth.js  dashboard.js  leaderboard.js  login.js  register.js  state.js  theme.js  ui.js  websockets.js
