[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "mysql-connector-python>=9.6.0",
    "pillow>=12.1.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]

[tool.uv.workspace]
members = [
    "backend",
]