[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "fastapi>=0.135.3",
    "itsdangerous>=2.2.0",
    "mysql-connector-python>=9.6.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "setuptools>=70.3.0",
    "uvicorn>=0.44.0",
    "websockets",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
