[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "itsdangerous>=2.2.0",
    "mysql-connector-python>=9.6.0",
    "pillow>=12.2.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
    "websockets",
]